Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 16:17+0200\n"
+"PO-Revision-Date: 2011-08-19 16:19+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12192,6 +12192,7 @@ msgstr "Geçici tablolara sebep olan sıralamaların oranı"
 msgid ""
 "Temporary tables average: %s, this value should be less than 1 per hour."
 msgstr ""
+"Geçici tabloların ortalaması: %s, bu değer saat başına 1'den az olmalıdır."
 
 #: po/advisory_rules.php:115
 msgid "Sort rows"
