Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 16:19+0200\n"
+"PO-Revision-Date: 2011-08-19 18:47+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12209,6 +12209,10 @@ msgid ""
 "indexed fields in the ORDER BY clause, as this will result in much faster "
 "sorting"
 msgstr ""
+"Satır sıralamanın yüksek miktarıyla hiçbir sorun yokken, ORDER BY ibaresinde "
+"indekslenmiş alanları kullanan çok fazla sıralama gerektiren sorgulardan "
+"emin olmak isteyebilirsiniz, ki bu çok daha hızlı sıralamayla "
+"sonuçlanacaktır."
 
 #: po/advisory_rules.php:118
 #, php-format
