--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 18:57+0200\n"
+"PO-Revision-Date: 2011-08-19 19:45+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12244,7 +12244,7 @@ msgstr ""
 
 #: po/advisory_rules.php:125
 msgid "Rate of reading first index entry"
-msgstr ""
+msgstr "Okunan ilk indeks girişi oranı"
 
 #: po/advisory_rules.php:126
 msgid "The rate of reading the first index entry is high."
