Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 01:20+0200\n"
+"PO-Revision-Date: 2011-08-19 21:09+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12347,6 +12347,15 @@ msgid ""
 "(often invalidated due to table updates) increasing {query_cache_limit} "
 "might reduce efficiency."
 msgstr ""
+"Cambiar «query_cache_limit» (normalmente aumentarlo) puede aumentar la "
+"eficiencia. Esta variable determina el tamaño máximo que puede tener el "
+"resultado de una consulta para ser agregada al caché de consultas. Si hay "
+"muchos resultados de consultas mayores a 1 MiB que son útiles al caché "
+"(muchas lecturas, pocas escrituras) entonces aumentar «query_cache_limit» "
+"aumentará la eficiencia. Sin embargo, en el caso que muchos resultados de "
+"consultas mayores a 1 MiB que no sean útiles al caché (invalidados "
+"frecuentemente por actualizaciones a la tabla) aumentar «query_cache_limit» "
+"podría reducir la eficiencia."
 
 #: po/advisory_rules.php:103
 msgid "query_cache_limit is set to 1 MiB"
