--- a/po/es.po
+++ b/po/es.po
@@ -12362,10 +12362,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr "«query_cache_limit» está definido a 1 MiB"
 
 #: po/advisory_rules.php:105
-#, fuzzy
 #| msgid "Allows creating temporary tables."
 msgid "Percentage of sorts that cause temporary tables"
-msgstr "Permite la creación de tablas temporales."
+msgstr "Porcentaje de ordenaciones que causan tablas temporales"
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
 #, fuzzy
