--- a/po/es.po
+++ b/po/es.po
@@ -12367,10 +12367,9 @@ msgid "Percentage of sorts that cause temporary tables"
 msgstr "Porcentaje de ordenaciones que causan tablas temporales"
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
-#, fuzzy
 #| msgid "Allows creating temporary tables."
 msgid "Too many sorts are causing temporary tables."
-msgstr "Permite la creación de tablas temporales."
+msgstr "Demasiadas ordenaciones causan tablas temporales."
 
 #: po/advisory_rules.php:107 po/advisory_rules.php:112
 msgid ""
