Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:15+0200\n"
+"PO-Revision-Date: 2011-08-19 21:16+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12417,6 +12417,10 @@ msgid ""
 "indexed fields in the ORDER BY clause, as this will result in much faster "
 "sorting"
 msgstr ""
+"Si bien no hay nada de malo en ordenar una gran cantidad de filas, podría "
+"llegar a desea asegurarse que las consultas que requieren gran cantidad de "
+"ordenación utilicen campos indexados en la cláusula «ORDER BY», lo que "
+"resultará en una ordenación más rápida"
 
 #: po/advisory_rules.php:118
 #, php-format
