--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:16+0200\n"
+"PO-Revision-Date: 2011-08-19 21:17+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12425,7 +12425,7 @@ msgstr ""
 #: po/advisory_rules.php:118
 #, php-format
 msgid "Sorted rows average: %s"
-msgstr ""
+msgstr "Promedio de filas ordenadas: %s"
 
 #: po/advisory_rules.php:120
 #, fuzzy
