--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:17+0200\n"
+"PO-Revision-Date: 2011-08-19 21:19+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12442,6 +12442,9 @@ msgid ""
 "This means that joins are doing full table scans. Adding indexes for the "
 "fields being used in the join conditions will greatly speed up table joins"
 msgstr ""
+"Esto significa que las uniones («JOIN») están realizando escrutinios "
+"completos sobre tablas. Agregar índices a los campos siendo utilizandos en "
+"las condiciones de la unión las acelerarán en gran medida"
 
 #: po/advisory_rules.php:123
 #, php-format
