--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:19+0200\n"
+"PO-Revision-Date: 2011-08-19 21:20+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12455,7 +12455,7 @@ msgstr ""
 
 #: po/advisory_rules.php:125
 msgid "Rate of reading first index entry"
-msgstr ""
+msgstr "Tasa de lectura del primer índice"
 
 #: po/advisory_rules.php:126
 msgid "The rate of reading the first index entry is high."
