Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:20+0200\n"
+"PO-Revision-Date: 2011-08-19 21:22+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12470,6 +12470,13 @@ msgid ""
 "scans. Other than that full index scans can only be reduced by rewriting "
 "queries."
 msgstr ""
+"Esto normalmente indica escruitinios completos de índices. Éstos son más "
+"rápidos que escrutinios de tablas pero requieren gran cantidad de clicos de "
+"CPU en tablas grandes. Si dichas tablas tienen o han tenido una gran "
+"cantidad de actualizaciones («UPDATE» o «DELETE»), ejecutar «OPTIMIZE TABLE» "
+"podría reducir dicha cantidad y/o acelerar los escrutinios completos de "
+"índices. De otra forma, la cantidad de escrutinios completos de índices sólo "
+"puede ser reducida re-escribiendo las consultas."
 
 #: po/advisory_rules.php:128
 #, php-format
