--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:23+0200\n"
+"PO-Revision-Date: 2011-08-19 21:24+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12499,6 +12499,9 @@ msgid ""
 "scan, including join queries that do not use indexes. Add indexes where "
 "applicable."
 msgstr ""
+"Esto indica que muchas consultas necesitan ordenar resultados y/o realizar "
+"un escrutinio completo de tablas, incluyendo consultas con uniones («JOIN») "
+"que no utilizan índices. Agregue índices donde sea aplicable."
 
 #: po/advisory_rules.php:133
 #, php-format
