Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:26+0200\n"
+"PO-Revision-Date: 2011-08-19 21:27+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12553,6 +12553,10 @@ msgid ""
 "wish to increase the in-memory table limit you will have to increase the "
 "other value as well."
 msgstr ""
+"Si ha modificado alguno de ellos deliberadamente: el servidor utiliza el "
+"valor menor de ellos para determinar el tamaño máximo de tablas en memoria. "
+"Si desea aumentar el límite de tamaño de tablas en memoria deberá también "
+"aumentar el otro valor."
 
 #: po/advisory_rules.php:143
 #, php-format
