Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -12562,6 +12562,7 @@ msgstr ""
 #, php-format
 msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
+"Los valores actuales son «tmp_table_size»: %s, «max_heap_table_size»: %s"
 
 #: po/advisory_rules.php:145
 #, fuzzy
