--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:32+0200\n"
+"PO-Revision-Date: 2011-08-19 21:33+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12621,6 +12621,14 @@ msgid ""
 "mentioned in in the <a href=\\\"http://dev.mysql.com/doc/refman/5.0/en/"
 "internal-temporary-tables.html\\\">MySQL Documentation</a>"
 msgstr ""
+"Aumentar «max_heap_table_size» y «tmp_table_size» podría ayudar. Sin "
+"embargo, algunas tablas temporales son siempre escritas a disco "
+"independientemente del valor de estas variables. Para eliminarlas deberá re-"
+"escribir las consultas para evitar estas condiciones (en una tabla temporal: "
+"la presencia de una columna «BLOB» o «TEXT», o la presencia de una columna "
+"mayor a 512 bytes) como se menciona en la <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.0/en/internal-temporary-"
+"tables.html\\\">documentación de MySQL</a>"
 
 #: po/advisory_rules.php:153
 #, php-format
