Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -12636,6 +12636,8 @@ msgid ""
 "Rate of temporay tables being written to disk: %s, this value should be less "
 "than 1 per hour"
 msgstr ""
+"La tasa de tablas temporales escritas al disco: %s, este valor debería ser "
+"menor a 1 por hora"
 
 #: po/advisory_rules.php:155
 #, fuzzy
