Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -12688,6 +12688,8 @@ msgstr ""
 #, php-format
 msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
+"Maxímo porcentaje de búfer de claves MyISAM utilizado en algún momento: %s, "
+"este valor debería ser mayor a 95%%"
 
 #: po/advisory_rules.php:165
 #, fuzzy
