--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:38+0200\n"
+"PO-Revision-Date: 2011-08-19 21:39+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -12692,10 +12692,9 @@ msgstr ""
 "este valor debería ser mayor a 95%%"
 
 #: po/advisory_rules.php:165
-#, fuzzy
 #| msgid "Sort buffer size"
 msgid "Percentage of MyISAM key buffer used"
-msgstr "Organizar el tamaño del búfer de memoria"
+msgstr "Porcentaje de búfer de claves MyISAM utilizado"
 
 #: po/advisory_rules.php:168
 #, php-format
