--- a/po/es.po
+++ b/po/es.po
@@ -12737,6 +12737,8 @@ msgid ""
 "Opening tables requires disk I/O which is costly. Increasing "
 "{table_open_cache} might avoid this."
 msgstr ""
+"Abrir tablas necesita de E/S en disco, lo cual es costoso. Aumentar "
+"«table_open_cache» podría evitarlo."
 
 #: po/advisory_rules.php:178
 #, php-format
