--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 19:49+0200\n"
+"PO-Revision-Date: 2011-08-19 21:46+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9783,8 +9783,8 @@ msgstr ""
 "Sabitlenmiş konumda satır tabanlı okumak için istek sayısıdır. Eğer "
 "sonuçları sıralamayı gerektiren çok fazla sorgu yapıyorsanız, bu değer "
 "yüksek olur. Muhtemelen bütün tabloları taramak için MySQL gerektiren çok "
-"fazla sorgulamanız vardır veya düzgün bir şekilde anahtarları "
-"kullanmamaktasınız."
+"fazla sorgulamalara sahipsiniz ya da anahtarları düzgün kullanılmayan "
+"birleştirmelere sahipsiniz."
 
 #: server_status.php:1209
 msgid ""
