--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:46+0200\n"
+"PO-Revision-Date: 2011-08-19 21:47+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12222,7 +12222,7 @@ msgstr "Sıralanmış satır ortalaması: %s"
 
 #: po/advisory_rules.php:120
 msgid "Rate of joins without indexes"
-msgstr "İndeksler olmaksızın katılım oranı"
+msgstr "İndeksler olmaksızın birleştirme oranı"
 
 #: po/advisory_rules.php:121
 msgid "There are too many joins without indexes."
