--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:47+0200\n"
+"PO-Revision-Date: 2011-08-19 21:48+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12226,7 +12226,7 @@ msgstr "İndeksler olmaksızın birleştirme oranı"
 
 #: po/advisory_rules.php:121
 msgid "There are too many joins without indexes."
-msgstr "İndeksler olmaksızın çok fazla katılım var."
+msgstr "İndeksler olmaksızın çok fazla birleştirme var."
 
 #: po/advisory_rules.php:122
 msgid ""
