--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:49+0200\n"
+"PO-Revision-Date: 2011-08-19 21:58+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12269,7 +12269,7 @@ msgstr ""
 
 #: po/advisory_rules.php:130
 msgid "Rate of reading fixed position"
-msgstr ""
+msgstr "Okunan sabit konum oranı"
 
 #: po/advisory_rules.php:131
 msgid "The rate of reading data from a fixed position is high."
