Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 21:59+0200\n"
+"PO-Revision-Date: 2011-08-19 23:16+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12261,6 +12261,13 @@ msgid ""
 "scans. Other than that full index scans can only be reduced by rewriting "
 "queries."
 msgstr ""
+"Bu genellikle sık görülen indeks taramasını gösterir. Eğer bu tablolar "
+"UPDATE'lerin ve DELETE'lerin yüksek birimlerine sahip ise ya da sahip "
+"olmuşsa, tam indeks taramaları tablo taramalarından daha hızlıdır ama büyük "
+"tablolarda çok İşlemci döngüsü gerektirir, çalıştırılan 'OPTIMIZE TABLE' tam "
+"indeks taramalarının hızını ve/veya miktarını azaltabilir. Diğer taraftan "
+"tam indeks taramaları sadece yeniden yazılan sorgular tarafından "
+"azaltılabilir."
 
 #: po/advisory_rules.php:128
 #, php-format
