--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 23:17+0200\n"
+"PO-Revision-Date: 2011-08-19 23:23+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12289,6 +12289,9 @@ msgid ""
 "scan, including join queries that do not use indexes. Add indexes where "
 "applicable."
 msgstr ""
+"Bu çoğu sorgunun sonuçları sıralaması ve/veya tam tablo taraması yapması "
+"gerektiğini gösterir, indeksleri kullanmayan birleştirme sorgular da dahil. "
+"Uygulanabilir yerlere indeksleri ekler."
 
 #: po/advisory_rules.php:133
 #, php-format
