--- a/po/tr.po
+++ b/po/tr.po
@@ -12273,7 +12273,7 @@ msgstr ""
 #, php-format
 msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
-"İndeks taramaları ortalaması: %s, bu değer saat başına 1'den az olmalıdır."
+"İndeks taramaları ortalaması: %s, bu değer saat başına 1'den az olmalıdır"
 
 #: po/advisory_rules.php:130
 msgid "Rate of reading fixed position"
