--- a/po/tr.po
+++ b/po/tr.po
@@ -12213,7 +12213,7 @@ msgstr ""
 "Satır sıralamanın yüksek miktarıyla hiçbir sorun yokken, ORDER BY ibaresinde "
 "indekslenmiş alanları kullanan çok fazla sıralama gerektiren sorgulardan "
 "emin olmak isteyebilirsiniz, ki bu çok daha hızlı sıralamayla "
-"sonuçlanacaktır."
+"sonuçlanacaktır"
 
 #: po/advisory_rules.php:118
 #, php-format
