--- a/po/tr.po
+++ b/po/tr.po
@@ -12235,7 +12235,7 @@ msgid ""
 msgstr ""
 "Bu, birleştirmeler tam tablo taraması yapıyor anlamına gelir. Birleştirme "
 "şartlarında kullanılan alanlar için indekslerin eklenmesi tablo "
-"birleştirmelerini fazlasıyla hızlandıracaktır."
+"birleştirmelerini fazlasıyla hızlandıracaktır"
 
 #: po/advisory_rules.php:123
 #, php-format
