Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 11:26+0200\n"
+"PO-Revision-Date: 2011-08-20 01:11+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -9495,6 +9495,9 @@ msgid ""
 "calculations and by rule of thumb which may not necessarily apply to your "
 "system."
 msgstr ""
+"Kakor koli, pomnite, da ta sistem nudi priporočila, ki temeljijo na "
+"preprostih računih in splošnih smernicah, katere morda ne ustrezajo vašemu "
+"sistemu."
 
 #: server_status.php:812
 msgid ""
