--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 01:11+0200\n"
+"PO-Revision-Date: 2011-08-20 01:13+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -9505,6 +9505,10 @@ msgid ""
 "changing (by reading the documentation) and how to undo the change. Wrong "
 "tuning can have a very negative effect on performance."
 msgstr ""
+"Preden spremenite kateri koli del konfiguracije, se prepričajte, da veste, "
+"kaj spreminjate (tako, da preberete dokumentacijo) in kako lahko spremembo "
+"razveljavite. Napačno nastavljanje ima lahko na zmogljivost zelo negativen "
+"učinek."
 
 #: server_status.php:814
 msgid ""
