--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 01:21+0200\n"
+"PO-Revision-Date: 2011-08-20 01:23+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11816,6 +11816,9 @@ msgid ""
 "Enable slow query logging by setting {log_slow_queries} to 'ON'. This will "
 "help troubleshooting badly performing queries."
 msgstr ""
+"Omogočite beleženje počasnih poizvedb tako, da nastavite {log_slow_queries} "
+"na 'ON'. To bo pomagalo pri odpravljanju težav s slabo delujočimi "
+"poizvedbami."
 
 #: po/advisory_rules.php:33
 msgid "log_slow_queries is set to 'OFF'"
