Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 01:23+0200\n"
+"PO-Revision-Date: 2011-08-20 01:24+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11884,6 +11884,9 @@ msgid ""
 "distribution. The MySQL manual only is accurate for official MySQL binaries, "
 "not any package distributions (such as RedHat, Debian/Ubuntu etc)."
 msgstr ""
+"Če niste prevedli iz izvorne kode, morda uporabljate paket, spremenjen z "
+"distribucijo. Priročnik MySQL je točen samo za uradne izdaje MySQL, ne za "
+"katere koli paketne distribucije (kot so RedHat, Debian/Ubuntu itn.)."
 
 #: po/advisory_rules.php:53
 msgid "'source' found in version_comment"
