--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 01:24+0200\n"
+"PO-Revision-Date: 2011-08-20 01:26+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -11918,6 +11918,9 @@ msgid ""
 "so MySQL might not be able to access all of your memory. You might want to "
 "consider installing the 64-bit version of MySQL."
 msgstr ""
+"Zmogljivost vašega pomnilnika je nad 3 GiB (predpostavljeno, da strežnik "
+"teče na localhost), zato MySQL morda ne bo zmožen dostopati do celotnega "
+"vašega pomnilnika. Razmislite o namestitvi 64-bitne različice MySQL."
 
 #: po/advisory_rules.php:63
 #, php-format
