--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-20 01:26+0200\n"
+"PO-Revision-Date: 2011-08-20 01:28+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5828,8 +5828,8 @@ msgid ""
 "The increment size for extending the size of an autoextending tablespace "
 "when it becomes full."
 msgstr ""
-" Velikost povečevanja pri razširjanju velikosti samorazširitvenega prostora "
-"v tabeli, ko ta postane poln."
+"Velikost povečevanja pri razširjanju velikosti samorazširitvenega prostora v "
+"tabeli, ko ta postane poln."
 
 #: libraries/engines/innodb.lib.php:32
 msgid "Buffer pool size"
